# ar3_moveit2_config

./: CMakeLists.txt  README.md  package.xml
config/: ar3_arm.srdf.xacro  ar3_arm.xacro  ar3_controllers.yaml
launch/: direct_joint_control.launch.py  moveit.launch.py
rviz/: moveit.rviz
